@@ -76,7 +76,7 @@ static int map_if_lk24(int sg_fd, const char * device_name, int rw,
 
 #define MAX_DEV_NAMES 256
 
-static char * version_str = "1.05 20100228 [svn: r144]";
+static char * version_str = "1.05 20100331 [svn: r148]";
 
 
 static struct option long_options[] = {
