@@ -96,6 +96,7 @@
 #define VPD_SECURITY_TOKEN 0xb1 /* OSD */
 #define VPD_TA_SUPPORTED 0xb2   /* SSC-3 */
 #define VPD_THIN_PROVISIONING 0xb2   /* SBC-3 */
+#define VPD_REFERRALS 0xb3
 #define VPD_AUTOMATION_DEV_SN 0xb3   /* SSC-3 */
 #define VPD_DTDE_ADDRESS 0xb4   /* SSC-4 */
 
