@@ -1,8 +1,8 @@
 sdparm (1.05-0.1) unstable; urgency=low
 
-  * additions to SAS-2 Enhanced phy control mode page
+  * see ChangeLog
 
- -- Douglas Gilbert <dgilbert@interlog.com>  Sun, 28 Feb 2009 09:50:00 -0500
+ -- Douglas Gilbert <dgilbert@interlog.com>  Wed, 31 Mar 2010 23:50:00 -0400
 
 sdparm (1.04-0.1) unstable; urgency=low
 
